--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "expo": "~47.0.6",
     "expo-font": "~11.0.1",
+    "expo-linear-gradient": "~12.0.1",
     "expo-status-bar": "~1.4.2",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
